# ESE224-MidtermProject

./: .gitignore  CMakeLists.txt  Midterm Project.sln  README.md
Midterm Project/: CMakeLists.txt  Midterm Project.sln  Midterm Project.vcxproj  Midterm Project.vcxproj.filters  Player.h  enemy.h  fileOperations.h  scoreboard.h
Midterm Project/Game/: CMakeLists.txt
Midterm Project/Midterm Project/: F0Comments.txt  F0Enemies.txt  F0RandomEvents.txt  F1Comments.txt  F1Enemies.txt  F1RandomEvents.txt  F2Comments.txt  F2Enemies.txt  F3Comments.txt  F3Enemies.txt  F3RandomEvents.txt  Midterm Project.vcxproj  Midterm Project.vcxproj.filters  Weapon.h  dangy.txt  enemy.cpp  enemy.h  fileOperations.cpp  fileOperations.h  floor.cpp  floor.h  main.cpp  player.cpp  player.h  randomComment.cpp  randomComment.h  randomEvents.cpp  randomEvents.h  scoreboard.cpp  scoreboard.h  weapon.cpp  weaponsList.txt
Midterm Project/Midterm Project/Debug/: Midterm Project.exe.recipe  Midterm Project.ilk  fileoperations.obj.enc  vc142.idb
Midterm Project/Midterm Project/Debug/Midterm Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Midterm Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Midterm Project/Midterm Project/x64/Debug/: .Midterm Project_BASE_2025.ilk.swp  Midterm Project.exe.recipe  (+3 more)
Midterm Project/apps/: CMakeLists.txt
Midterm Project/enc_temp_folder/34b6db8866e39e68e5ae4220b27df7d1/: main.cpp
Midterm Project/src/: Weapon.h  enemy.h  game.cpp
include/: weapon.h
src/: fileOperations.cpp  game.cpp  main.cpp  scoreboard.cpp
(+17 files in other folders)
